--- a/aboutus.html
+++ b/aboutus.html
@@ -5,11 +5,12 @@
     <!-- Required meta tags always come first -->
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" 
-    integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous"/> 
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" 
-    integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer"/>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lobster|Open+Sans"/>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
+        integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lobster|Open+Sans" />
     <link rel="stylesheet" href="/css/styles.css">
     <title>Nucamp: A Better Way To Camp</title>
 </head>
@@ -26,7 +27,7 @@
                     <h1>Nucamp</h1>
                     <h2>a better way to camp</h2>
                 </div>
-            </div> 
+            </div>
         </div>
     </header>
 
@@ -34,16 +35,19 @@
     <nav class="navbar navbar-expand-sm navbar-dark sticky-top">
         <div class="container">
             <a class="navbar-brand" href="index.html"><img src="img/logo.png" height="30" width="30"></a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" 
-            data-bs-target="#nucampNavbar">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#nucampNavbar">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="nucampNavbar">
                 <ul class="navbar-nav">
-                    <li class="nav-item"><a class="nav-link" href="index.html"><i class="fa-solid fa-house fa-lg"></i> Home</a></li>
-                    <li class="nav-item"><a class="nav-link active" href="#"><i class="fa-solid fa-info fa-lg"></i> About</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#"><i class="fa-solid fa-list fa-lg"></i> Sites</a></li>
-                    <li class="nav-item"><a class="nav-link" href="contactus.html"><i class="fa-solid fa-address-card fa-lg"></i> Contact</a></li>
+                    <li class="nav-item"><a class="nav-link" href="index.html"><i class="fa-solid fa-house fa-lg"></i>
+                            Home</a></li>
+                    <li class="nav-item"><a class="nav-link active" href="#"><i class="fa-solid fa-info fa-lg"></i>
+                            About</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#"><i class="fa-solid fa-list fa-lg"></i> Sites</a>
+                    </li>
+                    <li class="nav-item"><a class="nav-link" href="contactus.html"><i
+                                class="fa-solid fa-address-card fa-lg"></i> Contact</a></li>
             </div>
         </div>
     </nav>
@@ -57,17 +61,20 @@
                     <li class="breadcrumb-item active">About</li>
                 </ol>
                 <h2>About Us</h2>
-                <hr/>
+                <hr />
             </div>
         </div>
 
         <section class="row row-content">
             <div class="col-sm-6">
                 <h3>Our Mission</h3>
-                <p>We present a curated database of the best campsites in the vast woods and backcountry of the World Wide Web Wilderness. We increase access
-                to adventure for the public while promoting safe and respectful use of resources. The expert wilderness trekkers on our staff personally verify each
-                campsite to make sure that they are up to our standards. We also present a platform for campers to share reviews on campsites they have visited
-                with each other.</p>
+                <p>We present a curated database of the best campsites in the vast woods and backcountry of the World
+                    Wide Web Wilderness. We increase access
+                    to adventure for the public while promoting safe and respectful use of resources. The expert
+                    wilderness trekkers on our staff personally verify each
+                    campsite to make sure that they are up to our standards. We also present a platform for campers to
+                    share reviews on campsites they have visited
+                    with each other.</p>
             </div>
             <div class="col-sm-6">
                 <div class="card">
@@ -90,12 +97,12 @@
                 <div class="card bg-light mt-3">
                     <figure class="card-body">
                         <blockquote class="blockquote">
-                            <q>I will not follow where the path may lead, 
-                            but I will go where there is no path, and I will leave a trail.</q>
+                            <q>I will not follow where the path may lead,
+                                but I will go where there is no path, and I will leave a trail.</q>
                         </blockquote>
                         <figcaption class="blockquote-footer">
-                            Muriel Strode <cite>"Wind-Wafted Wild Flowers" - 
-                            The Open Court, Vol. 1903</cite>
+                            Muriel Strode <cite>"Wind-Wafted Wild Flowers" -
+                                The Open Court, Vol. 1903</cite>
                         </figcaption>
                     </figure>
                 </div>
@@ -103,16 +110,37 @@
         </section>
 
         <section class="row row-content">
-            <div class="col-12">
+            <div class="col">
                 <h3>Community Partners</h3>
-                <h4>Bootstrap Outfitters <small>Outdoor Gear Specialists</small></h4>
-                <p class="d-none d-sm-block">Bootstrap Outfitters supplies you with the gear you need at prices you can't beat.</p>
-                <h4>Git Out Expeditions <small>Group Adventure Expeditions</small></h4>
-                <p class="d-none d-sm-block">Join Git Out Expeditions to explore new horizons with a group of other adventurers!</p>
-                <h4>Mongo Fly Shop <small>Your Neighborhood Fly Fishing Shop</small></h4>
-                <p class="d-none d-sm-block">Need a new fishing pole, a tacklebox, or flies of all kinds? Stop by Mongo Fly Shop.</p>
-                <h4>Node Outdoor Apparel <small>Outdoor Clothes & Shoes</small></h4>
-                <p class="d-none d-sm-block">From polar fleeces to swimsuits, hiking boots to waders, a visit to Node will be sure to get you covered.</p>
+                <ul class="nav nav-tabs">
+                    <li class="nav-item"><a class="nav-link active" href="#bootstrap" role="tab" data-bs-toggle="tab">Botstrap Outfitters</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#git" role="tab" data-bs-toggle="tab">Git Out Expeditions</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#mongo" role="tab" data-bs-toggle="tab">Mongo Fly Shop</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#node" role="tab" data-bs-toggle="tab">Node Outdoor Apparel</a></li>
+                </ul>
+
+                <div class="tab-content">
+                    <div role="tabpanel" class="tab-pane fade show active" id="bootstrap">
+                        <h4>Bootstrap Outfitters <small>Outdoor Gear Specialists</small></h4>
+                        <p class="d-none d-sm-block">Bootstrap Outfitters supplies you with the gear you need at prices
+                            you can't beat.</p>
+                    </div>
+                    <div role="tabpanel" class="tab-pane fade" id="git">
+                        <h4>Git Out Expeditions <small>Group Adventure Expeditions</small></h4>
+                        <p class="d-none d-sm-block">Join Git Out Expeditions to explore new horizons with a group of
+                            other adventurers!</p>
+                    </div>
+                    <div role="tabpanel" class="tab-pane fade" id="mongo">
+                        <h4>Mongo Fly Shop <small>Your Neighborhood Fly Fishing Shop</small></h4>
+                        <p class="d-none d-sm-block">Need a new fishing pole, a tacklebox, or flies of all kinds? Stop
+                            by Mongo Fly Shop.</p>
+                    </div>
+                    <div role="tabpanel" class="tab-pane fade" id="node">
+                        <h4>Node Outdoor Apparel <small>Outdoor Clothes & Shoes</small></h4>
+                        <p class="d-none d-sm-block">From polar fleeces to swimsuits, hiking boots to waders, a visit to
+                            Node will be sure to get you covered.</p>
+                    </div>
+                </div>
             </div>
         </section>
 
@@ -122,7 +150,7 @@
                 <h2>Facts & Figures</h2>
                 <div class="table-responsive">
                     <table class="table table-striped">
-                        <thead class="bg-primary text-light" >
+                        <thead class="bg-primary text-light">
                             <tr>
                                 <th></th>
                                 <th>2020</th>
@@ -179,10 +207,12 @@
                     <i class="fa-solid fa-phone fa-lg text-primary"></i> Tel: 1-206-555-1234<br>
                     <i class="fa-solid fa-envelope fa-lg text-primary"></i> Email: campsites@nucamp.co
                 </div>
-        </div>
+            </div>
         </div>
     </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
