--- a/aboutus.html
+++ b/aboutus.html
@@ -112,33 +112,54 @@
         <section class="row row-content">
             <div class="col">
                 <h3>Community Partners</h3>
-                <ul class="nav nav-tabs">
-                    <li class="nav-item"><a class="nav-link active" href="#bootstrap" role="tab" data-bs-toggle="tab">Botstrap Outfitters</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#git" role="tab" data-bs-toggle="tab">Git Out Expeditions</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#mongo" role="tab" data-bs-toggle="tab">Mongo Fly Shop</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#node" role="tab" data-bs-toggle="tab">Node Outdoor Apparel</a></li>
-                </ul>
+                <div class="accordion" id="accordionExample">
 
-                <div class="tab-content">
-                    <div role="tabpanel" class="tab-pane fade show active" id="bootstrap">
-                        <h4>Bootstrap Outfitters <small>Outdoor Gear Specialists</small></h4>
-                        <p class="d-none d-sm-block">Bootstrap Outfitters supplies you with the gear you need at prices
-                            you can't beat.</p>
+                    <div class="accordion-item">
+                        <h4 class="accordion-header">
+                            <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#bootstrap">Bootstrap Outfitters</button>
+                        </h4>
+                        <div id="bootstrap" class="accordion-collapse collapse show" data-bs-parent="accordionExample">
+                            <div class="accordion-body d-none d-sm-block">
+                                <p>Bootstrap Outfitters supplies you with the gear you need at prices
+                                    you can't beat.</p>
+                            </div>
+                        </div>
                     </div>
-                    <div role="tabpanel" class="tab-pane fade" id="git">
-                        <h4>Git Out Expeditions <small>Group Adventure Expeditions</small></h4>
-                        <p class="d-none d-sm-block">Join Git Out Expeditions to explore new horizons with a group of
-                            other adventurers!</p>
+
+                    <div class="accordion-item">
+                        <h4 class="accordion-header">
+                            <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#git">Git Out Expeditions></button>
+                        </h4>
+                        <div id="git" class="accordion-collapse collapse show" data-bs-parent="accordionExample">
+                            <div class="accordion-body d-none d-sm-block">
+                                <p>Join Git Out Expeditions to explore new horizons with a group of
+                                    other adventurers!</p>
+                            </div>
+                        </div>
                     </div>
-                    <div role="tabpanel" class="tab-pane fade" id="mongo">
-                        <h4>Mongo Fly Shop <small>Your Neighborhood Fly Fishing Shop</small></h4>
-                        <p class="d-none d-sm-block">Need a new fishing pole, a tacklebox, or flies of all kinds? Stop
-                            by Mongo Fly Shop.</p>
+
+                    <div class="accordion-item">
+                        <h4 class="accordion-header">
+                            <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#mongo">Mongo Fly Shop</button>
+                        </h4>
+                        <div id="mongo" class="accordion-collapse collapse show" data-bs-parent="accordionExample">
+                            <div class="accordion-body d-none d-sm-block">
+                                <p>Need a new fishing pole, a tacklebox, or flies of all kinds? Stop
+                                    by Mongo Fly Shop.</p>
+                            </div>
+                        </div>
                     </div>
-                    <div role="tabpanel" class="tab-pane fade" id="node">
-                        <h4>Node Outdoor Apparel <small>Outdoor Clothes & Shoes</small></h4>
-                        <p class="d-none d-sm-block">From polar fleeces to swimsuits, hiking boots to waders, a visit to
-                            Node will be sure to get you covered.</p>
+
+                    <div class="accordion-item">
+                        <h4 class="accordion-header">
+                            <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#node">Node Outdoor Apparel</button>
+                        </h4>
+                        <div id="node" class="accordion-collapse collapse show" data-bs-parent="accordionExample">
+                            <div class="accordion-body d-none d-sm-block">
+                                <p>From polar fleeces to swimsuits, hiking boots to waders, a visit to
+                                    Node will be sure to get you covered.</p>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
