--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
                     <h2>a better way to camp</h2>
                 </div>
                 <div class="col-md-4 col-xl-2 mt-4">
-                    <a class="btn btn-info text-white btn-lg text-nowrap" href="#reserveForm" role="button">Reserve Campsite</a>
+                    <button type="button" class="btn btn-info text-white btn-lg text-nowrap" role="button"
+                        data-bs-toggle="modal" data-bs-target="#reserveModal">Reserve Campsite</a>
                 </div>
             </div>
         </div>
@@ -53,7 +54,7 @@
                     <li class="nav-item"><a class="nav-link" href="#"><i class="fa-solid fa-list fa-lg"></i> Sites</a>
                     </li>
                     <li class="nav-item"><a class="nav-link" href="contactus.html"><i
-                            class="fa-solid fa-address-card fa-lg"></i> Contact</a></li>
+                                class="fa-solid fa-address-card fa-lg"></i> Contact</a></li>
                 </ul>
                 <span class="navbar-text ms-auto">
                     <a role="button" data-bs-toggle="modal" data-bs-target="#loginModal">
@@ -63,7 +64,7 @@
             </div>
         </div>
     </nav>
-    
+
     <!---Login Modal--->
     <div class="modal fade" id="loginModal">
         <div class="modal-dialog">
@@ -85,13 +86,14 @@
                             <div class="row">
                                 <div class="mb-3 col-12">
                                     <label class="sr-only" for="loginPassword">Password</label>
-                                    <input type="password" class="form-control form-control-sm" id="loginPassword" placeholder="password">
+                                    <input type="password" class="form-control form-control-sm" id="loginPassword"
+                                        placeholder="password">
                                 </div>
                             </div>
                             <div class="col">
                                 <div class="form-check mb-3">
-                                    <input class="form-check-input" type="checkbox">
-                                    <label class="form-check-label"> Remember me</label>
+                                    <input class="form-check-input" type="checkbox" id="checkbox">
+                                    <label for="checkbox" class="form-check-label"> Remember me</label>
                                 </div>
                             </div>
                             <div class="row">
@@ -99,6 +101,52 @@
                                     <button type="button" class="btn btn-secondary"
                                         data-bs-dismiss="modal">Close</button>
                                     <button type="button" class="btn btn-primary">Save changes</button>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!---Reserve Modal-->
+    <div class="modal fade" id="reserveModal">
+        <div class="modal-dialog modal-lg">
+            <div class="modal-content">
+                <div class="modal-header bg-info text-white">
+                    <h1 class="modal-title"></h1>Reserve a Campsite</h1>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <div class="container-fluid">
+                        <form id="reserveForm" action="https://us-central1-nucamp-production.cloudfunctions.net/post/formdata" method="post">
+                            <div class="row mb-3">
+                                <label for="numCampers" class="col-sm-6 col-form-label">Numbers of Campers</label>
+                                <div class="col">
+                                    <select class="form-select" name="numCampers" id="numCampers">
+                                        <option>Select...</option>
+                                        <option value="1">1</option>
+                                        <option value="2">2</option>
+                                        <option value="3">3</option>
+                                        <option value="4">4</option>
+                                        <option value="5">5</option>
+                                        <option value="6">6</option>
+                                    </select>
+                                </div>
+                            </div>
+                            <div class="row mb-3">
+                                <label for="date" class="col-sm-6 col-form-label">Date</label>
+                                <div class="col">
+                                    <input class="form-control" type="date" id="date" name="date"
+                                        placeholder="date">
+                                </div>
+                            </div>
+                            <div class="row mb-3">
+                                <div class="col">
+                                    <button type="submit" class="btn btn-dark"
+                                        data-bs-dismiss="modal">Cancel</button>
+                                    <button type="submit" class="btn btn-primary">Search</button>
                                 </div>
                             </div>
                         </form>
@@ -162,43 +210,6 @@
             </div>
         </section>
 
-        <section class="row row-content">
-            <div class="col-sm-9 mx-auto">
-                <div class="card">
-                    <h3 class="card-header text-white bg-info">Reserve a Campsite</h3>
-                    <div class="card-body">
-                        <form id="reserveForm">
-                            <div class="row mb-3">
-                                <label for="numCampers" class="col-sm-6 col-form-label">Numbers of Campers</label>
-                                <div class="col">
-                                    <select class="form-select" name="numCampers" id="numCampers">
-                                        <option>Select...</option>
-                                        <option value="1">1</option>
-                                        <option value="2">2</option>
-                                        <option value="3">3</option>
-                                        <option value="4">4</option>
-                                        <option value="5">5</option>
-                                        <option value="6">6</option>
-                                    </select>
-                                </div>
-                            </div>
-                            <div class="row mb-3">
-                                <label for="date" class="col-sm-6 col-form-label">Date</label>
-                                <div class="col">
-                                    <input class="form-control" type="date" id="date" name="date"
-                                        placeholder="mm/dd/yyyy">
-                                </div>
-                            </div>
-                            <div class="row mb-3">
-                                <div class="col">
-                                    <button type="submit" class="btn btn-primary">Search</button>
-                                </div>
-                            </div>
-                        </form>
-                    </div>
-                </div>
-            </div>
-        </section>
     </main>
 
     <!--Footer-->
